--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 streamlit>=1.15.0
-crewai = {extras = ["tools"], version = "^0.85.0"}
+crewai == {extras = ["tools"], version = "^0.85.0"}
 python-dotenv
 googletrans==4.0.0-rc1
